Carousel fix (removing bug)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+     <link rel="preload" as="image" href="/carousel/band-pic-small.png">
+    <link rel="preload" as="image" href="/carousel/frank-mugshot.webp">
+    <link rel="preload" as="image" href="/carousel/caro-img-1.jpeg">
+    <link rel="preload" as="image" href="/carousel/band-pic-2.png">
+    <link rel="preload" as="image" href="/carousel/tennis.webp">
+    <link rel="preload" as="image" href="/carousel/hendrix-mugshot.webp">
+    <link rel="preload" as="image" href="/carousel/caro-img-3.jpeg">
     <title>51st Street Speakeasy</title>
   </head>
   <body>
